# 
# This file is part of the Glove distribution (https://github.com/piallai/glove).
# Copyright (C) 2022 Pierre Allain.
# 
# This program is free software: you can redistribute it and/or modify  
# it under the terms of the GNU General Public License as published by  
# the Free Software Foundation, version 3.
#
# This program is distributed in the hope that it will be useful, but 
# WITHOUT ANY WARRANTY; without even the implied warranty of 
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU 
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License 
# along with this program. If not, see <http://www.gnu.org/licenses/>.
#

add_subdirectory(src_sample000)
add_subdirectory(src_sample001)
add_subdirectory(src_sample001_1)
add_subdirectory(src_sample001_2)
add_subdirectory(src_sample001_3)
add_subdirectory(src_sample002)
add_subdirectory(src_sample002_1)
add_subdirectory(src_sample003)
add_subdirectory(src_sample003_1)
add_subdirectory(src_sample003_2)
add_subdirectory(src_sample004)
add_subdirectory(src_sample004_0)
add_subdirectory(src_sample004_1)
add_subdirectory(src_sample004_2)
add_subdirectory(src_sample004_3)
add_subdirectory(src_sample004_4)
add_subdirectory(src_sample004_5)
add_subdirectory(src_sample004_6)
add_subdirectory(src_sample005)
add_subdirectory(src_sample006)
add_subdirectory(src_sample007)
add_subdirectory(src_sample007_0)
add_subdirectory(src_sample007_1)
add_subdirectory(src_sample007_2)
add_subdirectory(src_sample007_3)
add_subdirectory(src_sample007_4)
add_subdirectory(src_sample008)
add_subdirectory(src_sample009)
add_subdirectory(src_sample009_1)
add_subdirectory(src_sample009_2)
add_subdirectory(src_sample010)
add_subdirectory(src_sample010_0)
add_subdirectory(src_sample010_1)
add_subdirectory(src_sample011)
add_subdirectory(src_sample012)
add_subdirectory(src_sample013)
add_subdirectory(src_sample014)
add_subdirectory(src_sample015)
add_subdirectory(src_sample016)
